--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shelf-cli",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "private": true,
   "main": "./lib/index.js",
   "bin": {
@@ -19,6 +19,7 @@
     "clear": "^0.1.0",
     "commander": "^8.2.0",
     "figlet": "^1.5.2",
+    "inquirer": "^8.2.0",
     "path": "^0.12.7"
   },
   "devDependencies": {
