Add init command

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "declaration": true,
     "outDir": "lib",
     "rootDir": "src",
-    "strict": true,
+    // TODO: use strict
+    // "strict": true,
     "types": ["node"],
     "esModuleInterop": true,
     "resolveJsonModule": true
