--- a/package.json
+++ b/package.json
@@ -14,16 +14,19 @@
     "lint": "eslint ./src"
   },
   "dependencies": {
+    "@gitbeaker/node": "^34.2.0",
     "chalk": "^4.1.2",
     "clear": "^0.1.0",
     "commander": "^8.2.0",
     "figlet": "^1.5.2",
     "inquirer": "^8.2.0",
+    "jira.js": "^2.7.0",
     "path": "^0.12.7"
   },
   "devDependencies": {
     "@types/clear": "^0.1.2",
     "@types/figlet": "^1.5.4",
+    "@types/inquirer": "^8.1.3",
     "@types/node": "^16.11.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
