--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,8 @@
     "lib": ["es6", "es2015", "dom"],
     "declaration": true,
     "outDir": "lib",
-    "rootDir": "src",
-    // TODO: use strict
-    // "strict": true,
+    "rootDir": "./src",
+    "strict": true,
     "types": ["node"],
     "esModuleInterop": true,
     "resolveJsonModule": true
