--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,7 @@
     "rootDir": "./src",
     "strict": true,
     "types": ["node"],
-    "esModuleInterop": true,
-    "resolveJsonModule": true
+    "esModuleInterop": true
   },
   "include": ["./src/**/*"],
   "exclude": ["node_modules"]
