--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "rootDir": "./src",
     "strict": true,
     "types": ["node"],
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "resolveJsonModule": true
   },
   "include": ["./src/**/*"],
   "exclude": ["node_modules"]
