--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@gitbeaker/node": "^34.2.0",
+    "@slack/web-api": "^6.4.0",
     "chalk": "^4.1.2",
     "clear": "^0.1.0",
     "commander": "^8.2.0",
