--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "figlet": "^1.5.2",
     "inquirer": "^8.2.0",
     "jira.js": "^2.7.0",
+    "ora": "^5.4.1",
     "path": "^0.12.7"
   },
   "devDependencies": {
