--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "shelf-cli",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
   "main": "./lib/index.js",
   "bin": {
     "shelf": "./lib/index.js"
