--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "start": "nodemon src/index.ts",
     "build": "tsc -p .",
     "lint": "eslint ./src",
-    "postinstall": "shelf --init-autocomplete",
-    "prepare": "husky install"
+    "postinstall": "shelf --init-autocomplete"
   },
   "dependencies": {
     "@gitbeaker/node": "^34.2.0",
@@ -40,7 +39,6 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
-    "husky": "^7.0.4",
     "nodemon": "^2.0.13",
     "ts-node": "^10.3.0",
     "typescript": "^4.4.4"
