--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
   },
   "repository": "git@github.com:ardier16/shelf-cli.git",
   "author": "ardier16 <ardier16@gmail.com>",
-  "files": [
-    "./lib"
-  ],
+  "files": ["./lib/**/*"],
   "keywords": [
     "cli",
     "typescript",
